fixing scroll on mobile view

--- a/frontend/src/components/StudentDashboard/StudentDashboard.css
+++ b/frontend/src/components/StudentDashboard/StudentDashboard.css
@@ -43,8 +43,7 @@
   .input-btn {
     width: 100%;
     height: 50%;
-
-    font-size: 2;
+    font-size: 2vh;
     margin: 3% 5% 5% 0%;
   }
   .logo {
